--- a/sign_up.html
+++ b/sign_up.html
@@ -4,10 +4,10 @@
 	<title>Sign up</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="../Css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="../Css/font-size.css">
-	<link rel="stylesheet" type="text/css" href="../Css/sign_in.css">
-	<link rel="stylesheet" type="text/css" href="../Css/font.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="css/font-size.css">
+	<link rel="stylesheet" type="text/css" href="css/sign_in.css">
+	<link rel="stylesheet" type="text/css" href="css/font.css">
 
 </head>
 <body>
